fix overflow

--- a/my-groups/style-group.css
+++ b/my-groups/style-group.css
@@ -33,6 +33,8 @@
     display: flex;
     align-items: center;
     gap: 24px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .group {
